the collapsing image gallery resolved

--- a/slick/index.css
+++ b/slick/index.css
@@ -1,3 +1,5 @@
+
+
 .numbers  {
 	width: 200px;
 	height: 100px;
@@ -15,11 +17,10 @@
 }
 
 @media all and (min-width: 992px){
-	/*body {
-		background-color: aqua;
-	}*/
+	
 }
 
+ 
 
 
 
@@ -32,24 +33,3 @@
 
 
 
-button { font-size: 20px; }
-
-.grid {
-  width: 125px;
-  background: #DDD;
-  height: 125px;
-  float: left;
-  margin-right: 20px;
-}
-
-.grid-item {
-  width: 90%;
-  height: 120px;
-  margin: 0 auto;
-  background: #09F;
-  transition: transform 0.4s;
-}
-
-.grid-item.is-moved {
-  transform: translateX(145px);
-}
